# batchnormalized-mlp

./: README.md  pyproject.toml
src/: ignore_file.py  test.ipynb  utils.py
src/model/: blocks.py  inference.py  layers.py  train.py  training.py
tests/: tests_main.py
